Fix alignment in assignment mark

--- a/src/app/ui/instructor/assignment-mark-individual/assignment-mark-individual.component.scss
+++ b/src/app/ui/instructor/assignment-mark-individual/assignment-mark-individual.component.scss
@@ -7,4 +7,12 @@
   .reduced-height {
     height: 50vh;
   }
+  .video-camera {
+    width: 410px;
+    height: auto;
+  }
+  .video-screen {
+    width: 100%;
+    height: auto;
+  }
 }
